syntax = "proto3";

package bank.grpc;

option java_package = "com.mr.gof.structural.proxy.bank.grpc";
option java_multiple_files = true;

// -----------------------------
//  Bank Account gRPC Service
// -----------------------------
service BankAccountService {
  rpc GetBalance (BalanceRequest) returns (BalanceResponse);
  rpc Deposit (TransactionRequest) returns (TransactionResponse);
  rpc Withdraw (TransactionRequest) returns (TransactionResponse);
}

// -----------------------------
//  Messages
// -----------------------------
message BalanceRequest {
  string accountId = 1;
}

message BalanceResponse {
  string balance = 1; // BigDecimal as string
}

message TransactionRequest {
  string accountId = 1;
  string amount = 2; // BigDecimal as string
}

message TransactionResponse {
  bool success = 1;
}
